# hass-mcp-server

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: create-release.yml  main.yml  release.yml
custom_components/mcp_server/: __init__.py  config_flow.py  const.py  http.py  manifest.json
custom_components/mcp_server_http_transport/: __init__.py  completions.py  config_flow.py  config_manager.py  const.py  dashboard_manager.py  http.py  json_utils.py  manifest.json  prompts.py  resources.py  server.py  strings.json  tools.py
custom_components/mcp_server_http_transport/prompts/: __init__.py  automation.py  automation_workflows.py  diagnostics.py  optimization.py  reporting.py  workflows.py
custom_components/mcp_server_http_transport/tools/: __init__.py  categories.py  config.py  config_files.py  dashboards.py  entities.py  helpers.py  images.py  knx.py  statistics.py  system.py  system_admin.py
custom_components/mcp_server_http_transport/translations/: en.json
tests/: conftest.py  test___init__.py  test_completions.py  test_config_flow.py  test_config_manager.py  test_const.py  test_dashboard_manager.py  test_e2e.py  test_e2e_oidc.py  test_http.py  test_integration.py  test_json_utils.py  test_prompts.py  test_resources.py  test_server.py  test_tools_config.py  test_tools_config_files.py  test_tools_dashboards.py  test_tools_entities.py  test_tools_helpers.py  test_tools_images.py  test_tools_knx.py  test_tools_statistics.py  test_tools_system.py  test_tools_system_admin.py
